switch default memory back to 1024m
git-svn-id: svn://svn.liferay.com/repos/public/tools/trunk/ide@68614 05bdf26c-840f-0410-9ced-eb539d925f36